Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-13125

Itemview background color incorrectly set on GNOME [reg]

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.7.1
    • 4.7.0
    • GUI: Look'n'Feel
    • None
    • Qt/X11/GNOME
    • 37e1bea301d3e4c4346fad16244067d62a093af6

    Description

      There seems to be a regression with item views on X11 with the Gtk+ theme.
      Backgrounds on item views are white while they should respect the brush color.

      This can be reproduced with the Frozen Columns example.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bachewii Jens
            bachewii Jens
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes