Add workaround for QTBUG-13125. Fixes Qt 4.7.0 GTK theme broken-ness. Creates a number of specific QSS rules that style the widgets that wre not correctly styling due to the bug. Works around Bug #642606.